--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,7 +1,12 @@
+.body, html {
+  background-image: url("https://webcomicms.net/sites/default/files/clipart/146256/blue-background-cliparts-146256-3397526.jpg");
+  background-size: cover;
+}
+
 .component {
-  margin: 20px;
-  padding: 10px;
-  width: 300px;
+  margin: 0px;
+  padding: 0px;
+  width: 320px;
 }
 
 ul {
@@ -9,8 +14,8 @@ ul {
 }
 
 img.logo {
-  height: 50px;
-  width: 50px;
+  height: 70px;
+  width: 130px;
 }
 
 h1.posts-title {
@@ -22,7 +27,7 @@ ul.navBar {
    margin: 0;
    padding: 0;
    width: 20%;
-   background-color: #7FFFD4;
+   background-color: white;
    height: 100%;
    position: fixed; /* Make it stick, even on scroll */
    overflow: auto; /* Enable scrolling if the sidenav has too much content */
@@ -43,6 +48,23 @@ li.component-item {
     text-align: center;
     padding: 10px;
     border: 5px;
+    font-family: 'Sarabun';
+    font-weight: bold;
+    font-size: 20px;
+    color: #87ceeb;
+    text-decoration: none;
+}
+a {
+    border-bottom:1px solid #000;
+    text-decoration:none;
+}
+a:visited {
+  color: black;
+  text-decoration: none;
+  border-bottom-color:rgba(255,255,255,0);
+}
+a:hover {
+  color: #87ceeb;
 }
 
 .postContents{
@@ -56,20 +78,27 @@ p.userName {
   padding: 10px;
   width: 70px;
   margin-bottom: 0px;
+  border-radius: 8px 0px 0px 0px;
 }
 
 p.content {
   border-top: 1px solid black;
-  border-left: 1px solid black;
   border-right: 1px solid black;
   width: 210px;
   padding: 10px;
   margin-bottom: 0px;
+  border-radius: 0px 8px 0px 0px;
+  text-align: left;
 }
 p.date {
-  border: 1px solid black;
+  border-left: 1px solid black;
+  border-bottom: 1px solid black;
+  border-right: 1px solid black;
   font-size: 10px;
   margin: 0px;
+  border-radius: 0px 0px 8px 8px;
+  text-align: right;
+  padding-right: 3px;
 }
 p.reactions {
   border-left: 1px solid black;
@@ -82,27 +111,91 @@ p.reactions {
 .commentContent {
   display: flex;
   margin-bottom: 0px;
+  border-radius: 8px;
 }
 p.commenter {
   border-bottom: 1px solid black;
   border-left: 1px solid black;
+  background-color: white;
   padding 5px;
   width: 70px;
   margin-bottom: 0px;
   font-size: 10px;
   margin-top: 0px;
+  border-radius: 8px;
+  font-family: 'Sarabun';
 }
 p.comment {
-  border-left: 1px solid black;
   border-right: 1px solid black;
   border-bottom: 1px solid black;
-  width: 210px;
+  background-color: white;
+  width: 320px;
   padding: 10px;
   margin-bottom: 0px;
   font-size: 10px;
   margin-top: 0px;
+  border-radius: 8px;
+  text-align: left;
+  font-family: 'Sarabun';
 }
 .postInput {
+  width: 320px;
+  height: 100px;
+  border-radius: 8px;
+  padding: 3px;
+  border: 1px solid black;
+}
+
+.login {
+  margin-top: 50px;
+}
+.loginLabel {
+  font-family: 'Sarabun';
+  font-weight: bold;
+  font-size: 20px;
+}
+.submit {
+  font-family: 'Sarabun';
+  font-weight: bold;
+  border-radius: 8px;
+  border: 1px solid black;
+  font-size: 15px;
+  margin-top: 8px;
+}
+.save {
+  font-family: 'Sarabun';
+  font-weight: bold;
+  border-radius: 8px;
+  border: 1px solid black;
+  font-size: 15px;
+  margin-top: 2px;
+}
+.inputBox {
+  border-radius: 8px;
+  border: 1px solid black;
+  padding: 5px;
+  margin: 5px;
+}
+.welcome {
+  font-family: 'Pacifico';
+  font-weight: bold;
+  font-size: 40px;
+  margin-left: -70px;
+}
+img.panda {
+  height: 150px;
   width: 300px;
-  height: 70px;
+}
+#group-selector {
+  font-family: 'Sarabun';
+  font-weight: bold;
+  border-radius: 8px;
+  border: 1px solid black;
+  margin-top: 2px;
+}
+.savePost {
+  display: flex;
+  justify-content: space-between;
+  padding-left: 5px;
+  padding-right: 5px;
 }
