--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -66,15 +66,17 @@ a:visited {
 a:hover {
   color: #87ceeb;
 }
-
+a.register {
+  border-bottom:1px solid black;
+}
 .postContents{
   display: flex;
   margin-bottom: 0px;
 }
 
 p.userName {
-  border-left: 1px solid black;
-  border-top: 1px solid black;
+  border-left: 2px solid black;
+  border-top: 2px solid black;
   padding: 10px;
   width: 70px;
   margin-bottom: 0px;
@@ -82,8 +84,8 @@ p.userName {
 }
 
 p.content {
-  border-top: 1px solid black;
-  border-right: 1px solid black;
+  border-top: 2px solid black;
+  border-right: 2px solid black;
   width: 210px;
   padding: 10px;
   margin-bottom: 0px;
@@ -91,9 +93,9 @@ p.content {
   text-align: left;
 }
 p.date {
-  border-left: 1px solid black;
-  border-bottom: 1px solid black;
-  border-right: 1px solid black;
+  border-left: 2px solid black;
+  border-bottom: 2px solid black;
+  border-right: 2px solid black;
   font-size: 10px;
   margin: 0px;
   border-radius: 0px 0px 8px 8px;
@@ -101,9 +103,9 @@ p.date {
   padding-right: 3px;
 }
 p.reactions {
-  border-left: 1px solid black;
-  border-right: 1px solid black;
-  border-bottom: 1px solid black;
+  border-left: 2px solid black;
+  border-right: 2px solid black;
+  border-bottom: 2px solid black;
   font-size: 10px;
   margin: 0px;
 }
@@ -114,25 +116,25 @@ p.reactions {
   border-radius: 8px;
 }
 p.commenter {
-  border-bottom: 1px solid black;
-  border-left: 1px solid black;
+  border-bottom: 2px solid black;
+  border-left: 2px solid black;
   background-color: white;
   padding 5px;
   width: 70px;
   margin-bottom: 0px;
-  font-size: 10px;
+  font-size: 12px;
   margin-top: 0px;
   border-radius: 8px;
   font-family: 'Sarabun';
 }
 p.comment {
-  border-right: 1px solid black;
-  border-bottom: 1px solid black;
+  border-right: 2px solid black;
+  border-bottom: 2px solid black;
   background-color: white;
   width: 320px;
   padding: 10px;
   margin-bottom: 0px;
-  font-size: 10px;
+  font-size: 15px;
   margin-top: 0px;
   border-radius: 8px;
   text-align: left;
@@ -143,7 +145,9 @@ p.comment {
   height: 100px;
   border-radius: 8px;
   padding: 3px;
-  border: 1px solid black;
+  border: 2px solid black;
+  font-family: 'Sarabun';
+  font-size: 15px;
 }
 
 .login {
@@ -153,6 +157,12 @@ p.comment {
   font-family: 'Sarabun';
   font-weight: bold;
   font-size: 20px;
+  display: inline-block;
+   /* float: left; */
+   clear: left;
+   width: 250px;
+   text-align: right;
+   margin-left: -110px;
 }
 .submit {
   font-family: 'Sarabun';
@@ -175,8 +185,15 @@ p.comment {
   border: 1px solid black;
   padding: 5px;
   margin: 5px;
+  display: inline-block;
+  /* float: left; */
 }
 .welcome {
+  font-family: 'Pacifico';
+  font-weight: bold;
+  font-size: 40px;
+}
+.title {
   font-family: 'Pacifico';
   font-weight: bold;
   font-size: 40px;
@@ -198,4 +215,46 @@ img.panda {
   justify-content: space-between;
   padding-left: 5px;
   padding-right: 5px;
+}
+.makeComment {
+  display: flex;
+}
+.commentInput {
+  border-radius: 8px;
+  width: 280px;
+  font-family: 'Sarabun';
+}
+.save-comment {
+  border-radius: 8px;
+  font-family: 'Sarabun';
+  border: 1px solid black;
+}
+.news-img {
+  height: 150px;
+  width: 300px;
+  border-radius: 8px;
+  margin-top: 10px;
+}
+.news-list {
+  display: flex;
+  margin-left: 220px;
+  margin-right: 30px;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+}
+.news-item {
+  border: 1px solid black;
+  border-radius: 8px;
+  margin: 5px;
+}
+.newsTitle {
+  font-family: 'Sarabun';
+  font-weight: bold;
+  padding: 5px;
+}
+.newsBody {
+  font-family: 'Sarabun';
+  text-align: left;
+  padding: 10px;
 }
