--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -258,3 +258,35 @@ img.panda {
   text-align: left;
   padding: 10px;
 }
+.check-message {
+  font-family: 'Sarabun';
+  font-weight: bold;
+  border-radius: 8px;
+  border: 1px solid black;
+  margin-top: 2px;
+  font-size: 15px;
+}
+.check-detail {
+  font-family: 'Sarabun';
+  padding: 5px;
+}
+.check-list {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: 220px;
+  margin-right: 30px;
+}
+.check-item {
+  margin: 5px;
+  background-color: white;
+  border-radius: 12px;
+  box-shadow: 5px 5px #888888;
+}
+.send-check {
+  font-family: 'Sarabun';
+  font-weight: bold;
+  border-radius: 8px;
+  border: 1px solid black;
+  font-size: 15px;
+  margin-bottom: 20px;
+}
